--- a/html/address.html
+++ b/html/address.html
@@ -22,7 +22,7 @@
             background-size:12px 18px ;
             position: absolute;
             left:0;
-            top: 0;
+            top: 26px;
         }
         h1{
             font-size:18px;
@@ -30,14 +30,14 @@
         }
         .add{
             position: absolute;
-            top: 0px;
+            top: 26px;
             right: 6px;
         }
     </style>
 </head>
 <body>
       <div class="login_header">
-          <div class="back"></div>
+          <div class="back" onclick="back()"></div>
           <h1>收获地址</h1>
           <div class="add">添加</div>
       </div>
@@ -45,8 +45,26 @@
 <script type="text/javascript" src="../script/api.js"></script>
 <script src="../script/jquery-1.12.3.min.js"></script>
 <script type="text/javascript">
-    apiready = function(){
-
-    };
+apiready = function(){
+    var login_header = document.querySelector('.login_header');
+    // 实现沉浸式状态栏效果
+    $api.fixStatusBar(login_header);
+    var y = $api.getStorage('headerH');
+    api.openFrame({
+        name: 'address_frame',
+        url: './address_frame.html',
+        rect: {
+            x: 0,
+            y: y,
+            w: 'auto',
+            h: 'auto'
+        },
+        pageParam: {name: 'pageparam'},
+        bounces: true
+    });
+};
+function back(){
+    api.closeWin();
+}
 </script>
 </html>
