--- a/html/coupon.html
+++ b/html/coupon.html
@@ -26,7 +26,7 @@
             background-size:12px 18px ;
             position: absolute;
             left:0;
-            top: 0;
+            top: 26px;
         }
         h1{
             font-size:18px;
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div class="login_header">
-        <div class="back"></div>
+        <div class="back" onclick="back()"></div>
         <h1>我的优惠券</h1>
         <div class="register">注册</div>
     </div>
@@ -74,8 +74,28 @@
 <script type="text/javascript" src="../script/api.js"></script>
 <script src="../script/jquery-1.12.3.min.js"></script>
 <script type="text/javascript">
-    apiready = function(){
-
-    };
+apiready = function(){
+  var login_header = document.querySelector('.login_header');
+  var search = document.querySelector('search');
+  // 实现沉浸式状态栏效果
+  $api.fixStatusBar(login_header);
+    var y = parseInt($api.offset(login_header).h);
+    var search = parseInt($api.offset(search).h);
+    api.openFrame({
+        name: 'coupon_frame',
+        url: './coupon_frame.html',
+        rect: {
+            x: 0,
+            y: y+search,
+            w: 'auto',
+            h: 'auto'
+        },
+        pageParam: {name: 'pageparam'},
+        bounces: true
+    });
+};
+function back(){
+    api.closeWin();
+}
 </script>
 </html>
