--- a/html/main_frame.html
+++ b/html/main_frame.html
@@ -265,8 +265,8 @@ function initRefresh(){
   api.setRefreshHeaderInfo({
     visible: true,
     loadingImg: 'widget://image/refresh.png',
-    bgColor: '#ccc',
-    textColor: '#fff',
+    bgColor: '#fff',
+    textColor: '#ccc',
     textDown: '下拉刷新...',
     textUp: '松开刷新...',
     showTime: true
