--- a/html/myorder.html
+++ b/html/myorder.html
@@ -22,7 +22,7 @@
             background-size:12px 18px ;
             position: absolute;
             left:0;
-            top: 0;
+            top: 26px;
         }
         h1{
             font-size:18px;
@@ -69,7 +69,7 @@
 </head>
 <body>
       <div class="login_header">
-          <div class="back"></div>
+          <div class="back" onclick="back()"></div>
           <h1>我的订单</h1>
       </div>
     <nav>
@@ -82,7 +82,27 @@
 <script src="../script/jquery-1.12.3.min.js"></script>
 <script type="text/javascript">
     apiready = function(){
-
+        var login_header = document.querySelector('.login_header');
+        var nav = document.querySelector('nav')
+        // 实现沉浸式状态栏效果
+        $api.fixStatusBar(login_header);
+        var y = parseInt($api.getStorage('headerH'));
+        var navH = parseInt($api.offset(nav).h);
+        api.openFrame({
+            name: 'myorder_frame',
+            url: './myorder_frame.html',
+            rect: {
+                x: 0,
+                y: y+navH,
+                w: 'auto',
+                h: 'auto'
+            },
+            pageParam: {name: 'pageparam'},
+            bounces: true
+        });
     };
+    function back(){
+        api.closeWin();
+    }
 </script>
 </html>
