到支付页面
git-svn-id: svn://svn4.apicloud.com/A6054402379586/myFirstApp@12 0e1a2743-8d03-4e5a-a60c-7e26af42b145

--- a/html/address.html
+++ b/html/address.html
@@ -39,7 +39,7 @@
       <div class="login_header">
           <div class="back" onclick="back()"></div>
           <h1>收获地址</h1>
-          <div class="add">添加</div>
+          <div class="add" onclick="addAddress()">添加</div>
       </div>
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
@@ -65,6 +65,16 @@ apiready = function(){
 };
 function back(){
     api.closeWin();
+}
+function addAddress(){
+  api.openWin({
+      name: 'setaddress',
+      url: './setaddress.html',
+      pageParam: {
+          name: 'test'
+      }
+  });
+
 }
 </script>
 </html>
