--- a/html/coupon.html
+++ b/html/coupon.html
@@ -76,7 +76,7 @@
 <script type="text/javascript">
 apiready = function(){
   var login_header = document.querySelector('.login_header');
-  var search = document.querySelector('search');
+  var search = document.querySelector('.search');
   // 实现沉浸式状态栏效果
   $api.fixStatusBar(login_header);
     var y = parseInt($api.offset(login_header).h);
