--- a/html/personalcenter.html
+++ b/html/personalcenter.html
@@ -27,8 +27,11 @@
             background-size:12px 18px ;
             position: absolute;
             left:0;
-            top: 50%;
-            margin-top: -25px;
+            top: 26px;
+        }
+        h1{
+            font-size:18px;
+            text-align: center;
         }
         section{
             flex: 1;
@@ -68,6 +71,7 @@
 <body>
       <div id="header">
           <div class="back" onclick="back()"></div>
+          <h1>个人中心</h1>
       </div>
       <section></section>
       <footer id="footer">
@@ -78,7 +82,7 @@
               <div class="button message">消息</div>
           </div>
           <div class="item">
-              <div class="button setting">XXX</div>
+              <div class="button setting">退货</div>
           </div>
           <div class="item">
               <div class="button service">客服</div>
