--- a/html/login_frame.html
+++ b/html/login_frame.html
@@ -77,6 +77,7 @@ var login_user,login_pwd;
       //  alert(JSON.stringify(ret))
        if (ret) {
            // 保存用户信息
+          //  console.log(JSON.stringify(ret))
           $api.setStorage('userInfo', ret);
           api.alert({
               title: '提示',
